@@ -1,3 +1,4 @@
+1.3.27-0 @02/13/2010 15:45:00 UTC@
 1.3.26-0 @02/09/2010 00:15:00 UTC@
 1.3.25-0 @01/02/2010 17:05:00 UTC@
 1.3.24-0 @10/17/2009 23:40:00 UTC@
